crates/toml/tests/snapshots/invalid/table/duplicate-key-08.stderr
TOML parse error at line 3, column 4
  |
3 | [a.b]
  |    ^
duplicate key

---
TOML parse error at line 4, column 1
  |
4 | c = 2
  | ^
duplicate key
